--- a/src/components/AppNavigation.scss
+++ b/src/components/AppNavigation.scss
@@ -55,62 +55,19 @@ nav .logo img {
 .navbar li a svg:hover {
   color: black;
 }
-// .dropdown {
-//   float: left;
-//   overflow: hidden;
-// }
 
-// .fa {
-//   font-size: 15px;
-// }
-
-// .dropdown .dropbtn {
-//   font-size: 16px;
-//   border: none;
-//   outline: none;
-//   color: #868686;
-//   padding: 14px 16px;
-//   background-color: inherit;
-//   margin: 0;
-//   font-family: "Roboto Condensed", sans-serif;
-//   -o-transition: 0.5s;
-//   -ms-transition: 0.5s;
-//   -moz-transition: 0.5s;
-//   -webkit-transition: 0.5s;
-//   /* ...and now for the proper property */
-//   transition: 0.5s;
-// }
-
-// .navbar a:hover,
-// .dropdown:hover .dropbtn {
-//   color: black;
-//   cursor: pointer;
-// }
-
-// .dropdown-content {
-//   display: none;
-//   position: absolute;
-//   background-color: #fff;
-//   min-width: 160px;
-//   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-//   z-index: 1;
-// }
-
-// .dropdown-content a {
-//   float: none;
-//   color: #868686;
-//   padding: 12px 16px;
-//   text-decoration: none;
-//   display: block;
-//   text-align: left;
-//   font-family: "Roboto Condensed", sans-serif;
-// }
-
-// .dropdown-content a:hover {
-//   color: black;
-//   cursor: pointer;
-// }
-
-// .dropdown:hover .dropdown-content {
-//   display: block;
-// }
+@media (max-width: 767px) {
+  nav {
+    .logo {
+      width: 40%;
+      padding-right: 0;
+    }
+  }
+  .navbar {
+    width: 60%;
+    li {
+      margin: 0;
+      padding: 22px 5px;
+    }
+  }
+}
