--- a/src/components/AppNavigation.scss
+++ b/src/components/AppNavigation.scss
@@ -29,6 +29,7 @@ nav .logo img {
   display: flex;
   justify-content: center;
   font-weight: lighter;
+  padding: 0;
 }
 .navbar li {
   list-style-type: none;
