--- a/src/components/AppNavigation.scss
+++ b/src/components/AppNavigation.scss
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
+// @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
+@import url("https://fonts.googleapis.com/css?family=Oswald&display=swap");
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Oswald", sans-serif;
   margin: 0;
   height: 100%;
   width: 100%;
@@ -41,6 +42,7 @@ nav .logo img {
   text-decoration: none;
   color: black;
   opacity: 0.6;
+  transition: ease 0.3s;
 }
 .navbar li a svg {
   text-decoration: none;
